--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,13 @@
         <li class="nav-item active"><a class="nav-link" [routerLink]="['/cerca']" routerLinkActive="router-link-active">Ricerca</a></li>
         <li *ngIf="is_signedin" class="nav-item active"><a class="nav-link" [routerLink]="['/inserisci']" routerLinkActive="router-link-active">Inserisci</a></li>
         <li *ngIf="is_signedin" class="nav-item active"><button class="btn btn-dark" (click)="doLogout()">Esci</button></li>
+        <div ngbDropdown class="d-inline-block" *ngIf="is_signedin">
+          <button class="btn btn-outline-light" id="dropdownBasic1" ngbDropdownToggle>Prestito</button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button class="dropdown-item">Visualizza prestiti</button>
+            <button class="dropdown-item">Gestisci prestito</button>
+          </div>
+        </div>
       </ul>
       <span class="navbar-text">M. MacGherl@2018 Copyright All Right Reserved.</span>
     </div>
