--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,8 @@
         <div ngbDropdown class="d-inline-block" *ngIf="is_signedin">
           <button class="btn btn-outline-light" id="dropdownBasic1" ngbDropdownToggle>Prestito</button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <button class="dropdown-item">Visualizza prestiti</button>
-            <button class="dropdown-item">Gestisci prestito</button>
+            <button class="dropdown-item" (click)="openPage()">Visualizza prestiti</button>
+            <button class="dropdown-item">Inserisci prestito</button>
           </div>
         </div>
       </ul>
