--- a/src/app/ricerca/ricerca.component.html
+++ b/src/app/ricerca/ricerca.component.html
@@ -57,22 +57,21 @@
   <div class="col">Titolo</div>
   <div class="col">Curatore</div>
   <div class="col">Pubblicazione</div>
-  <div class="col">Soggetto</div>
+  <!--<div class="col">Soggetto</div>-->
   <div class="col">Collocazione</div>
 </div>
 <div class="row text-white bg-dark" *ngFor="let libro of pagedItems">
-  <div class="col-md-1 text-dark bg-white">
-      <table><tr>
-      <td><a (click)="openModal(libro.N)"><img [src]="'assets/images/info.png'"></a></td>
-      <td><a (click)="openEdit(libro.N)"><img [src]="'assets/images/edit-pencil-icon-20x20.png'"></a></td>
-      <td *ngIf="is_signedin"><a (click)="openConfirmationDialog(libro.N)"><img [src]="'assets/images/delete-20.png'"></a></td>
-    </tr></table>
+  <div class="col-md-2 text-dark bg-white">
+      <a (click)="openModal(libro.N)"><img [src]="'assets/images/info.png'"></a>
+      <a (click)="openEdit(libro.N)"><img [src]="'assets/images/edit-pencil-icon-20x20.png'"></a>
+      <a *ngIf="is_signedin" (click)="openConfirmationDialog(libro.N)"><img [src]="'assets/images/delete-20.png'"></a>
+      <a *ngIf="is_signedin" routerLink="/insprestito/{{libro.N}}"><img [src]="'assets/images/prestito.png'"></a>
   </div>
   <div class="col">{{libro.autore}}</div>
   <div class="col">{{libro.titolo}}</div>
   <div class="col">{{libro.curatore}}</div>
   <div class="col">{{libro.pubblicazione}}</div>
-  <div class="col">{{libro.soggetto}}</div>
+  <!--<div class="col">{{libro.soggetto}}</div>-->
   <div class="col">{{libro.collocazione}}</div>
 </div>
   <ul *ngIf="pager.pages && pager.pages.length > 1" class="pagination justify-content-center">
