--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,11 +9,11 @@
         <div ngbDropdown class="d-inline-block" *ngIf="is_signedin">
           <button class="btn btn-outline-light" id="dropdownBasic1" ngbDropdownToggle>Prestito</button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <button class="dropdown-item" (click)="openPage()">Visualizza prestiti</button>
-            <button class="dropdown-item">Inserisci prestito</button>
+            <button class="dropdown-item" (click)="openPage()">Prestiti non restituiti</button>
+            <button class="dropdown-item" (click)="openRest()">Prestiti restituiti</button>
           </div>
         </div>
       </ul>
-      <span class="navbar-text">M. MacGherl@2018 Copyright All Right Reserved.</span>
+      <span class="navbar-text">Gest-Bibl - M. MacGherl@2019 Copyright All Right Reserved.</span>
     </div>
 </nav>
