--- a/src/app/inserisci-prestito/inserisci-prestito.component.html
+++ b/src/app/inserisci-prestito/inserisci-prestito.component.html
@@ -33,8 +33,13 @@
   </div>
   <div class="form-group">
     <label for="data_prelievo">Data Prelievo</label>
-    <input [(ngModel)]="libro.data_prelievo" type="text" name="data_prelievo" id="data_prelievo" class="form-control" placeholder="" aria-describedby="helpId" #data="ngModel" required>
-    <small id="helpId" class="text-muted">data prelievo</small>
+    <input [(ngModel)]="libro.data_prelievo" type="text" name="data_prelievo" id="data_prelievo" 
+        class="form-control" placeholder="" aria-describedby="helpId" #data="ngModel" required pattern="^[0-9]{2}/[0-9]{2}/[0-9]{4}$">
+    <div *ngIf="data.invalid && (data.dirty || data.touched)" class="alert alert-danger">
+      <div *ngIf="data.errors.pattern">Data in formato sbagliato.</div>
+      <div *ngIf="data.errors.required">Data obbligatoria</div>
+    </div>
+    <small id="helpId" class="text-muted">formato: GG/MM/AAAA</small>
   </div>
   <div *ngIf="!insprestForm.valid else showSubmitButton">
       <button type="submit" class="btn btn-lg btn-dark" disabled>Inserisci</button>
