--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,18 @@
         <li class="nav-item active"><a class="nav-link" [routerLink]="['/cerca']" routerLinkActive="router-link-active">Ricerca</a></li>
         <li *ngIf="is_signedin" class="nav-item active"><a class="nav-link" [routerLink]="['/inserisci']" routerLinkActive="router-link-active">Inserisci</a></li>
         <li *ngIf="is_signedin" class="nav-item active"><button class="btn btn-dark" (click)="doLogout()">Esci</button></li>
-        <div ngbDropdown class="d-inline-block" *ngIf="is_signedin">
+        <div ngbDropdown class="d-inline-block mr-2" *ngIf="is_signedin">
           <button class="btn btn-outline-light" id="dropdownBasic1" ngbDropdownToggle>Prestito</button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
             <button class="dropdown-item" (click)="openPage()">Prestiti non restituiti</button>
             <button class="dropdown-item" (click)="openRest()">Prestiti restituiti</button>
+          </div>
+        </div>
+        <div ngbDropdown class="d-inline-block" *ngIf="is_signedin">
+          <button class="btn btn-outline-light" id="dropdownBasic2" ngbDropdownToggle>Riviste</button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
+            <button class="dropdown-item" [routerLink]="['/elencoriviste']" routerLinkActive="router-link-active">Tutte le Riviste</button>
+            <button class="dropdown-item" [routerLink]="['/gestiscirivista']" routerLinkActive="router-link-active">Aggiungi numero rivista</button>
           </div>
         </div>
       </ul>
