--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
   <a class="navbar-brand" href="/">{{title}}</a>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"><a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">Login</a></li>
-        <li class="nav-item active"><a class="nav-link" [routerLink]="['/cerca']" routerLinkActive="router-link-active">Ricerca</a></li>
-        <li *ngIf="is_signedin" class="nav-item active"><a class="nav-link" [routerLink]="['/inserisci']" routerLinkActive="router-link-active">Inserisci</a></li>
-        <li *ngIf="is_signedin" class="nav-item active"><button class="btn btn-dark" (click)="doLogout()">Esci</button></li>
+        <li class="nav-item active"><button class="btn btn-outline-light mr-2" [routerLink]="['/login']" routerLinkActive="router-link-active">Login</button></li>
+        <li class="nav-item active"><button class="btn btn-outline-light mr-2" [routerLink]="['/cerca']" routerLinkActive="router-link-active">Ricerca</button></li>
+        <li *ngIf="is_signedin" class="nav-item active"><button class="btn btn-outline-light mr-2" [routerLink]="['/inserisci']" routerLinkActive="router-link-active">Inserisci</button></li>
+        <li *ngIf="is_signedin" class="nav-item active"><button class="btn btn-outline-light mr-2" (click)="doLogout()">Esci</button></li>
         <div ngbDropdown class="d-inline-block mr-2" *ngIf="is_signedin">
           <button class="btn btn-outline-light" id="dropdownBasic1" ngbDropdownToggle>Prestito</button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
