--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,14 +5,14 @@
 <form #loginForm="ngForm" class="form-signin" (ngSubmit)=validate(loginForm.value)>
     <div class="form-group">
         <label for="username">Nome Utente:</label>
-        <input type="text" name="username"  class="form-control" id="username" placeholder="Nome Utente" #username="ngModel" autofocus required ngModel>
+        <input type="text" name="username"  class="form-control" id="username" placeholder="Nome Utente" autocomplete="username" #username="ngModel" autofocus required ngModel>
     </div>
     <div class="alert alert-danger" role="alert" *ngIf="username.invalid && (username.dirty || username.touched)">
      <div *ngIf="username.errors.required">Lo username non può essere nullo!</div>
    </div>
  <div class="form-group">
   <label for="password">Password:</label>
-  <input type="password" name="password" class="form-control" id="password" placeholder="Password" #password="ngModel"  required minlength="6" maxlength="20" ngModel>
+  <input type="password" name="password" class="form-control" id="password" placeholder="Password" autocomplete="current-password" #password="ngModel"  required minlength="6" maxlength="20" ngModel>
 </div>
 <div *ngIf="!loginForm.valid else showSubmitButton">
   <button type="submit" class="btn btn-lg btn-dark" disabled>Login</button>
